# vn-generator

./: .env.sample  .gitignore  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml  service_account.json
.github/workflows/: validation.yml
games/capy-web/: index.html  manifest.json  pwa_catalog.json  service-worker.js
src/app/: __init__.py  __main__.py
src/app/api/: __init__.py  game.py  health_check.py  run_game.py  user.py
src/app/config/: default.py  utils.py
src/app/db/: __init__.py  alembic.ini
src/app/db/connection/: __init__.py  session.py
src/app/db/migration/: env.py
src/app/db/migration/versions/: 703ed04d3a75_initial.py  86b5b57a9a23_initial.py
src/app/db/models/: __init__.py  base.py  game.py  mixins.py  user.py
src/app/middlewares/: __init__.py  exception_middleware.py
src/app/repositories/: __init__.py  game_repository.py  health_repository.py  user_repository.py
src/app/schemas/: __init__.py  common.py  game.py  user.py
src/app/services/: __init__.py  game_service.py  health_service.py  user_service.py
src/app/utils/: __init__.py  dependencies.py  exception_handlers.py  exceptions.py  hostname.py
